@@ -4,6 +4,8 @@
  * Update bundled cqlsh python driver to 3.7.0 (CASSANDRA-12736)
  * Reject invalid replication settings when creating or altering a keyspace (CASSANDRA-12681)
  * Clean up the SSTableReader#getScanner API wrt removal of RateLimiter (CASSANDRA-12422)
+Merged from 3.X:
+ * Add parent repair session id to anticompaction log message (CASSANDRA-12186)
 
 
 3.10
